deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bore-server
  labels:
    app: bore-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bore-server
  template:
    metadata:
      labels:
        app: bore-server
    spec:
      containers:
        - name: bore-server
          image: registry.gitlab.com/fullpipe/registry/bore-server:latest
          command: ['/go/bin/app', 'server']
          imagePullPolicy: Always
          resources:
            limits:
              cpu: '200m'
              memory: '312Mi'
          volumeMounts:
            - name: bore-server-data
              mountPath: /app/data
      imagePullSecrets:
        - name: gitlab-registry-secret
      volumes:
        - name: bore-server-data
          persistentVolumeClaim:
            claimName: bore-server-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: bore-server-service
spec:
  ports:
    - name: http
      targetPort: 8080
      port: 8080
  selector:
    app: bore-server

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bore-server
spec:
  ingressClassName: 'traefik'
  tls:
    - hosts:
        - bore.fullpipe.dev
      secretName: bore.fullpipe.dev-tls
  rules:
    - host: bore.fullpipe.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bore-client-service
                port:
                  name: http
          - path: /query
            pathType: Prefix
            backend:
              service:
                name: bore-server-service
                port:
                  name: http
          - path: /books
            pathType: Prefix
            backend:
              service:
                name: bore-server-service
                port:
                  name: http
          - path: /playground
            pathType: Prefix
            backend:
              service:
                name: bore-server-service
                port:
                  name: http
